[package]
name = "pluto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
http-body-util = "0.1.0-rc.3"
hyper = "0.14.27"
thiserror = "1.0.43"
tokio = "1.29.1"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.19"

[lib]
name = "pluto"
path = "src/lib.rs"

[[bin]]
name = "pluto"
path = 'src/main.rs'

[[example]]
name = 'server'
