[package]
name = "pluto"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DefectingCat/pluto"
keywords = ["ping", 'tcping']
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.15", features = ["derive"] }
thiserror = "1.0.43"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.19"

[lib]
name = "pluto"
path = "src/lib.rs"

[[bin]]
name = "pluto"
path = 'src/main.rs'

[[example]]
name = 'server'
